Apollo server express package added

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "dependencies": {
+    "apollo-server-express": "^3.11.1",
     "concurrently": "^7.6.0"
   },
   "name": "train-track",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js --ignore client",
