--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,8 @@
   },
   "devDependencies": {
     "babel-loader": "^9.1.2",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
