--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "dev": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production"
   },
