--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-ATLAS_URI=mongodb+srv://jeffsun811:atlas3312@train-track.yqqhyqq.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://jeffsun811:atlas3312@train-track.yqqhyqq.mongodb.net/?retryWrites=true&w=majority
 PORT=3001
