--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.0.1",
-    "mongoose": "^7.0.2"
+    "mongoose": "^7.0.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
